# jaffebot-with-UI

./: .env.example  .gitignore  README.md  db_test_cases.sql  package-lock.json  test_db.py
.cursor/: mcp.json
.taskmaster/docs/: grafana_dashboard.json  prd.txt  soc2_gap_analysis.md
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: Layout.tsx  Navigation.tsx
src/api/: README.md  audit.py  audit_db.py  audit_db_schema.sql  aws_secrets.py  benchmark.py  celery_app.py  discovery.py  google_auth.py  google_auth_test.py  gsc.py  logging_utils.py  main.py  monitoring.py  monitoring_agent_architecture.md  openai_client.py  pyproject.toml
src/api/migrations/: 001_add_tenants_and_cwv.sql  README.md  migration_runner.py
